# YEngine

./: .gitignore  .gn  BUILD.gn  DEPS  LICENSE.md  README.md  generate_ninja.py
YCommon/: BUILD.gn
YCommon/YContainers/: AtomicArray.cpp  AtomicArray.h  AtomicArray_test.cpp  AtomicHashTable.cpp  AtomicHashTable.h  AtomicHashTable_AtomicTest.cpp  AtomicHashTable_Test.cpp  AtomicMemPool.cpp  AtomicMemPool.h  AtomicMemPool_AtomicTest.cpp  AtomicMemPool_Test.cpp  AtomicQueue.cpp  AtomicQueue.h  AtomicQueue_AtomicTest.cpp  AtomicQueue_Test.cpp  BUILD.gn  CommandTree.cpp  CommandTree.h  CommandTree_Test.cpp  HashTable.cpp  HashTable.h  HashTable_Test.cpp  MemBuffer.cpp  MemBuffer.h  MemPool.cpp  MemPool.h  MemPool_Test.cpp  RefPointer.cpp  RefPointer.h  RefPointer_Test.cpp  ThreadPool.cpp  ThreadPool.h  ThreadPool_Test.cpp  UnorderedArray.cpp  UnorderedArray.h  UnorderedArray_Test.cpp
YCommon/YPlatform/: BUILD.gn  FilePath.cpp  FilePath.h  FilePath_Test.cpp  FilePath_Win.cpp  Platform.h  PlatformHandle.h  PlatformHandle_Win.cpp  PlatformHandle_Win.h  Platform_Win.cpp  Platform_Win.h  Semaphore.h  Semaphore_Test.cpp  Semaphore_Win.cpp  Sleep.h  Sleep_Test.cpp  Sleep_Win.cpp  Thread.h  Thread_Test.cpp  Thread_Win.cpp  Timer.h  Timer_Test.cpp  Timer_Win.cpp
YCommon/YUtils/: Assert.h  Assert_GTest.cpp  Assert_WinMsgBox.cpp  BUILD.gn  Hash.cpp  Hash.h  YAssert.h  YAssert_WinMsgBox.cpp
YEngine/TestDialog/: BUILD.gn
YEngine/TestDialog/Data/: Basic.vertdecl.json  FullScreen.shdr.json  Present.mat.json  StoneWall.mat.json  TestRenderPasses.rpass.json  full-screen.hlsl
YEngine/TestDialog/Win/: main.cpp
YEngine/YCore/: AtomicQueue.cpp  AtomicQueue.h  Atomics.h  Atomics_Win.h  BUILD.gn  StringTable.cpp  StringTable.h  ThreadPool.cpp  ThreadPool.h  YSemaphore.h  YSemaphore_Win.cpp  YThread.h  YThread_Win.cpp
YEngine/YDataLoader/: BUILD.gn  DataLoader.cpp  DataLoader.h  ShaderLoad.cpp  ShaderLoad.h
YEngine/YRenderDevice/: BUILD.gn  DrawPrimitive.h  PixelFormat.h  RenderBlendState.h  RenderDevice.h  RenderDevice_DX9.cpp  RenderDevice_Mock.cpp  RenderDevice_Mock.h  RenderDevice_d3d12.cpp  RenderDevice_dx9.cpp  SamplerState.h  VertexDeclElement.h  VertexFormat.h
YEngine/YRenderer/: BUILD.gn  BasicRendererTest.h  BlendState.cpp  BlendState.h  BlendState_Test.cpp  RenderCommands.h  RenderDeviceState.cpp  RenderDeviceState.h  RenderKeyField.h  RenderStateCache.cpp  RenderStateCache.h  RenderStateCache_Test.cpp  RenderTarget.cpp  RenderTarget.h  RenderTarget_Test.cpp  Renderer.cpp  Renderer.h  RendererCommon.cpp  RendererCommon.h  Renderer_Test.cpp  ShaderData.cpp  ShaderData.h  ShaderData_Test.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer_Test.cpp  ViewPort.cpp  ViewPort.h  ViewPort_Test.cpp
YTools/: BUILD.gn  tools.gni
YTools/YFileUtils/: BUILD.gn  FileEnv.cpp  FileEnv.h  FilePath.cpp  FilePath.h  FileStream.cpp  FileStream.h
YTools/YShaderCompiler/: BUILD.gn  CompileShader.h  CompileShader_D3DShaderModel4.cpp  CompileShader_DX9.cpp  DXShaderCompiler.cpp  DXShaderCompiler.h  main.cpp
schemas/: BUILD.gn  asset_database.fbs  bind_param.fbs  bind_params.fbs  binding_type.fbs  material.fbs  mesh.fbs  model.fbs  module_binary.fbs  module_binary_types.fbs  param_type.fbs  render_passes.fbs  render_targets.fbs  render_type.fbs  sampler.fbs  shader.fbs  texture.fbs  vertex_decl.fbs  vertex_member_types.fbs  vertex_usage_types.fbs
ycommon/containers/: BUILD.gn  atomic_hash_table.cpp  atomic_hash_table.h  atomic_hash_table_test_atomic.cpp  atomic_mem_pool.cpp  atomic_mem_pool.h  atomic_mem_pool_test_atomic.cpp  atomic_queue.cpp  atomic_queue.h  atomic_queue_test.cpp  atomic_queue_test_atomic.cpp  command_tree.cpp  command_tree.h  command_tree_test.cpp  hash_table.cpp  hash_table.h  hash_table_test.cpp  mem_buffer.cpp  mem_buffer.h  mem_pool.cpp  mem_pool.h  mem_pool_test.cpp  ref_pointer.cpp  ref_pointer.h  ref_pointer_test.cpp  thread_pool.cpp  thread_pool.h  thread_pool_test.cpp  unordered_array.cpp  unordered_array.h  unordered_array_test.cpp
ycommon/platform/: BUILD.gn  file_path.cpp  file_path.h  file_path_test.cpp  file_path_win.cpp  platform.h  platform_handle.h  platform_handle_win.cpp  platform_handle_win.h  platform_win.cpp  platform_win.h  semaphore.h  semaphore_test.cpp  semaphore_win.cpp  sleep.h  sleep_test.cpp  sleep_win.cpp  thread.h  thread_test.cpp  thread_win.cpp  timer.h  timer_test.cpp  timer_win.cpp
ycommon/utils/: BUILD.gn  assert.h  assert_gtest.cpp  assert_win_msg_box.cpp  hash.cpp  hash.h
yengine/data_loader/: BUILD.gn  data_loader.cpp  data_loader.h  shader_load.cpp  shader_load.h
yengine/render_device/: BUILD.gn  draw_primitive.h  pixel_format.h  render_blend_state.h  render_device.h  render_device_d3d12.cpp  render_device_dx9.cpp  render_device_mock.cpp  render_device_mock.h  sampler_state.h  vertex_decl_element.h  vertex_format.h
yengine/renderer/: BUILD.gn  basic_renderer_test.h  render_commands.h  render_device_state.cpp  render_device_state.h  render_key_field.h  render_state_cache.cpp  render_state_cache.h  render_state_cache_test.cpp  render_target.cpp  render_target.h  render_target_test.cpp  renderer.cpp  renderer.h  renderer_common.cpp  renderer_common.h  renderer_test.cpp  shader_data.cpp  shader_data.h  shader_data_test.cpp  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_test.cpp  view_port.cpp  view_port.h  view_port_test.cpp
yengine/test_dialog/: BUILD.gn
yengine/test_dialog/Data/: CrustyConcrete.mat.json  FullScreen.shdr.json  (+1 more)
ytools/yasset_database/: BUILD.gn  yasset_database.py
ytools/ymesh_compiler/: BUILD.gn  main.cpp  mesh_data.cpp  mesh_data.h  mesh_data_inline.cpp  mesh_data_inline.h
ytools/ymodule_binary_compiler/: BUILD.gn  asset_database.cpp  asset_database.h  main.cpp  module_data.cpp  module_data.h
ytools/yparam_data_compiler/: BUILD.gn  main.cpp
ytools/yshader_compiler/: BUILD.gn  compile_shader.h  compile_shader_d3d_shader_model4.cpp  compile_shader_d3d_shader_model5.cpp  compile_shader_dx9.cpp  d3d_shader_compiler.cpp  d3d_shader_compiler.h  main.cpp
ytools/ytexture_compiler/: BUILD.gn  main.cpp
(+98 files in other folders)
