
group("default") {
  deps = [
    "//ycommon",
    "//yengine",
    "//ytools",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//ycommon/containers:containers_test_run",
    "//ycommon/platform:platform_test_run",
    "//yengine/renderer:renderer_test_run",
  ]
}

group("large_tests") {
  testonly = true
  deps = [
    "//ycommon/containers:containers_test_atomic_run",
  ]
}
