
template("CompileShader") {
  action(target_name) {
    script = "//build/cmd_wrapper.py"
    shader_file = invoker.shader_file
    shader_output = invoker.output_file
    inputs = [ shader_file ] + invoker.inputs
    outputs = [ shader_output ]

    deps = [
      "//YTools/YShaderCompiler",
    ]

    args = [ "--", "YShaderCompiler",
             "--input_file", rebase_path(shader_file, root_build_dir),
             "--output_file", rebase_path(shader_output, root_build_dir) ]
  }
}
