
static_library("YContainers") {
  sources = [
    "AtomicHashTable.cpp",
    "AtomicHashTable.h",
    "AtomicMemPool.cpp",
    "AtomicMemPool.h",
    "AtomicQueue.cpp",
    "AtomicQueue.h",
    "CommandTree.cpp",
    "CommandTree.h",
    "HashTable.h",
    "HashTable.cpp",
    "ThreadPool.cpp",
    "ThreadPool.h",
  ]

  deps = [
    "//YCommon/YUtils",
    "//YCommon/YPlatform",
  ]
}

unit_test("YContainers_Test") {
  sources = [
    "AtomicMemPool_Test.cpp",
    "AtomicQueue_Test.cpp",
    "CommandTree_Test.cpp",
    "HashTable_Test.cpp",
    "ThreadPool_Test.cpp",
  ]

  deps += [
    ":YContainers",
  ]
}

unit_test("YContainers_AtomicTest") {
  sources = [
    "AtomicHashTable_AtomicTest.cpp",
    "AtomicMemPool_AtomicTest.cpp",
    "AtomicQueue_AtomicTest.cpp",
  ]

  deps += [
    ":YContainers",
    "//YCommon/YPlatform",
  ]
}
