
static_library("YContainers") {
  sources = [
    "AtomicHashTable.cpp",
    "AtomicMemPool.cpp",
    "AtomicQueue.cpp",
    "CommandTree.cpp",
    "HashTable.cpp",
    "MemBuffer.cpp",
    "MemPool.cpp",
    "RefPointer.cpp",
    "ThreadPool.cpp",
  ]

  deps = [
    "//YCommon/YPlatform",
  ]
}

unit_test("YContainers_Test") {
  sources = [
    "AtomicQueue_Test.cpp",
    "CommandTree_Test.cpp",
    "HashTable_Test.cpp",
    "MemPool_Test.cpp",
    "RefPointer_Test.cpp",
    "ThreadPool_Test.cpp",
  ]

  deps += [
    ":YContainers",
    "//YCommon/YUtils:YUtils_TestLib",
  ]
}

unit_test("YContainers_AtomicTest") {
  sources = [
    "AtomicHashTable_AtomicTest.cpp",
    "AtomicMemPool_AtomicTest.cpp",
    "AtomicQueue_AtomicTest.cpp",
  ]

  deps += [
    ":YContainers",
    "//YCommon/YPlatform",
  ]
}
