
static_library("YPlatform") {
  sources = [
    "Platform.h",
    "PlatformHandle.h",
    "Semaphore.h",
    "Thread.h",
  ]

  if (is_win) {
    sources += [
      "Platform_Win.cpp",
      "Platform_Win.h",
      "PlatformHandle_Win.cpp",
      "PlatformHandle_Win.h",
      "Semaphore_Win.cpp",
      "Thread_Win.cpp",
    ]
  }
}

unit_test("YPlatform_Test") {
  sources = [
    "Thread_Test.cpp",
  ]

  deps += [
    ":YPlatform",
  ]
}
