
static_library("YPlatform") {
  sources = [
    "FilePath.cpp",
    "FilePath.h",
    "Platform.h",
    "PlatformHandle.h",
    "Semaphore.h",
    "Sleep.h",
    "Thread.h",
    "Timer.h",
  ]

  if (is_win) {
    sources += [
      "FilePath_Win.cpp",
      "Platform_Win.cpp",
      "Platform_Win.h",
      "PlatformHandle_Win.cpp",
      "PlatformHandle_Win.h",
      "Semaphore_Win.cpp",
      "Sleep_Win.cpp",
      "Thread_Win.cpp",
      "Timer_Win.cpp",
    ]
  }

  deps = [
    "//YCommon/YUtils:YUtils",
  ]
}

unit_test("YPlatform_Test") {
  sources = [
    "FilePath_Test.cpp",
    "Semaphore_Test.cpp",
    "Sleep_Test.cpp",
    "Thread_Test.cpp",
    "Timer_Test.cpp",
  ]

  deps += [
    ":YPlatform",
  ]
}
