
source_set("YUtils_Common") {
  sources = [
    "Hash.cpp",
  ]

  deps = [
    "//third_party/build/google/cityhash",
  ]
}

static_library("YUtils") {
  sources = []

  if (is_win) {
    sources += [
      "Assert_WinMsgBox.cpp",
    ]
  }

  deps = [
    ":YUtils_Common",
  ]
}

static_library("YUtils_Test") {
  sources = [
    "Assert_GTest.cpp",
  ]

  deps = [
    "//third_party/build/google/gtest",
  ]
}
