
import("//YTools/tools.gni")

CompileShader("fullscreen_shdr") {
  shader_file = "Data/FullScreen.shdr.json"
  output_file = "${root_build_dir}/data/FullScreen.shdr.bin"
  inputs = [ "Data/full-screen.hlsl" ]
}

executable("TestDialog") {
  sources = [
    "Win/main.cpp",
  ]

  deps = [
    "//YEngine/YFramework",
    "//YCommon/YPlatform",
  ]

  data_deps = [
    ":fullscreen_shdr"
  ]
}
