
static_library("YDataLoader") {
  sources = [
    "DataLoader.cpp",
    "ShaderLoad.cpp",
  ]

  deps = [
    "//schemas:compile_shader_schema",
    "//third_party/build/google/flatbuffers",
    "//YCommon/YContainers",
    "//YEngine/YRenderer",
  ]

  cflags = [
    "/wd4239", # non-const reference bound to lvalue. (flat buffer verifier)
  ]
}
