
static_library("YRenderDevice") {
  sources = [
    "DrawPrimitive.h",
    "PixelFormat.h",
    "RenderBlendState.h",
    "RenderDevice.h",
    "SamplerState.h",
    "VertexDeclElement.h",
    "VertexFormat.h",
  ]

  if (gfx == "dx9") {
    sources += [
      "RenderDevice_DX9.cpp",
    ]
  }

  deps = [
    "//YCommon/YContainers",
    "//YCommon/YUtils",
  ]

  configs += [
    "//build/config/gfx/${gfx}:gfx",
  ]
}
