
static_library("YRenderDevice") {
  sources = []

  if (gfx == "dx9") {
    sources += [
      "RenderDevice_DX9.cpp",
    ]
  }

  deps = [
    "//YCommon/YContainers",
    "//YCommon/YUtils",
  ]

  configs += [
    "//build/config/gfx/${gfx}:gfx",
  ]
}

static_library("YRenderDevice_Mock") {
  sources = [ "RenderDevice_Mock.cpp" ]

  deps = [
    "//third_party/build/google/gmock",
  ]
}
