
source_set("YRenderer_Common") {
  sources = [
    "BlendState.cpp",
    "Renderer.cpp",
    "RendererCommon.cpp",
    "RenderTarget.cpp",
    "ViewPort.cpp",
  ]

  deps = [
    "//YCommon/YContainers",
    "//YEngine/YCore",
  ]
}

static_library("YRenderer") {
  deps = [
    ":YRenderer_Common",
    "//YEngine/YRenderDevice",
  ]
}

unit_test("YRenderer_Test") {
  sources = [
    "BlendState_Test.cpp",
    "Renderer_Test.cpp",
    "RenderTarget_Test.cpp",
    "ViewPort_Test.cpp",
  ]

  deps += [
    ":YRenderer_Common",
    "//YEngine/YRenderDevice:YRenderDevice_Mock",
    "//YCommon/YUtils:YUtils_TestLib",
  ]
}
