
source_set("YRenderer_Common") {
  sources = [
    "Renderer.cpp",
    "RendererCommon.cpp",
    "RenderStateCache.cpp",
    "RenderTarget.cpp",
    "ShaderData.cpp",
    "ViewPort.cpp",
  ]

  deps = [
    "//YCommon/YContainers",
    "//YEngine/YCore",
  ]
}

static_library("YRenderer") {
  deps = [
    ":YRenderer_Common",
    "//YEngine/YRenderDevice",
  ]
}

unit_test("YRenderer_Test") {
  sources = [
    "Renderer_Test.cpp",
    "RenderStateCache_Test.cpp",
    "RenderTarget_Test.cpp",
    "ShaderData_Test.cpp",
    "ViewPort_Test.cpp",
  ]

  deps += [
    ":YRenderer_Common",
    "//YEngine/YRenderDevice:YRenderDevice_Mock",
    "//YCommon/YUtils:YUtils_TestLib",
  ]
}
