
static_library("YRenderer") {
  sources = [
    "RenderDeviceState.cpp",
    "Renderer.cpp",
    "RendererCommon.cpp",
    "RenderStateCache.cpp",
    "RenderTarget.cpp",
    "ShaderData.cpp",
    "VertexBuffer.cpp",
    "ViewPort.cpp",
  ]

  deps = [
    "//YCommon/YContainers",
    "//YEngine/YCore",
    "//YEngine/YRenderDevice",
  ]
}

unit_test("YRenderer_Test") {
  sources = [
    "Renderer_Test.cpp",
    "RenderStateCache_Test.cpp",
    "RenderTarget_Test.cpp",
    "ShaderData_Test.cpp",
    "VertexBuffer_Test.cpp",
    "ViewPort_Test.cpp",
  ]

  deps += [
    ":YRenderer",
    "//YEngine/YRenderDevice:YRenderDevice_Mock",
    "//YCommon/YUtils:YUtils_TestLib",
  ]
}
