
tool_executable("YShaderCompiler") {
  sources = [
    "main.cpp",
    "CompileShader.h",
  ]

  if (gfx == "dx9") {
    sources += [
      "CompileShader_DX9.cpp",
    ]
  }

  deps = [
    "//schemas:compile_shader_schema",
    "//third_party/build/google/gflags",
    "//third_party/build/google/flatbuffers",
    "//YTools/YFileUtils",
  ]

  public_configs = [
    "//third_party/build/rapidjson",
  ]
}
