
tool_executable("YShaderCompiler") {
  sources = [
    "main.cpp",
    "CompileShader.h",
  ]

  deps = [
    "//schemas:compile_shader_schema",
    "//third_party/build/google/gflags",
    "//third_party/build/google/flatbuffers",
    "//YTools/YFileUtils",
  ]

  public_configs = [
    "//third_party/build/rapidjson",
  ]

  if (gfx == "dx9") {
    sources += [
      "CompileShader_DX9.cpp",
      "DXShaderCompiler.cpp",
      "DXShaderCompiler.h",
    ]

    deps += [
      "//build/config/gfx/dx11:D3DCompiler",
    ]
  }
}
