
tool_executable("yparam_data_compiler") {
  sources = [
    "main.cpp",
  ]

  deps = [
    "//schemas:bind_params_schema_cpp",
    "//third_party/build/google/gflags",
    "//third_party/build/google/flatbuffers",
    "//third_party/build/rapidjson",
    "//ytools/file_utils",
    "//ytools/report_utils",
  ]
}
