import("//build/build_asset.gni")

compile_asset_database("test_dialog_asset_database") {
  sources = [
    "${target_gen_dir}/mesh/unit_cube.mesh",
    "${target_gen_dir}/samplers/point_sampler.smpl",
    "${target_gen_dir}/shaders/full_screen.shdr",
    "${target_gen_dir}/vertex_types/position.vtxd",
    "${target_gen_dir}/vertex_types/position_texcoord.vtxd",
  ]

  output = "${target_gen_dir}/${target_name}.json"

  deps = [
    "mesh:unit_cube",
    "samplers:point_sampler",
    "shaders:full_screen",
    "vertex_types:position",
    "vertex_types:position_texcoord",
  ]
}

compile_module_binary("test_level_data") {
  asset_database = "${target_gen_dir}/test_dialog_asset_database.json"
  input = "test_level_data.mdbf.json"
  output = "${root_build_dir}/data/test_level_data.mdbf"

  deps = [
    ":test_dialog_asset_database",
  ]
}
