import("//build/build_asset.gni")

compile_asset_database("test_dialog_asset_database") {
  sources = [
    "${target_gen_dir}/mesh/unit_cube.mesh",
    "${target_gen_dir}/render_passes/deferred_render_passes.rpas",
    "${target_gen_dir}/render_targets/deferred_render_targets.rtgs",
    "${target_gen_dir}/render_types/directional_light_render_type.rtyp",
    "${target_gen_dir}/render_types/full_screen_render_type.rtyp",
    "${target_gen_dir}/render_types/point_light_render_type.rtyp",
    "${target_gen_dir}/render_types/render_object_render_type.rtyp",
    "${target_gen_dir}/samplers/point_sampler.smpl",
    "${target_gen_dir}/shaders/diffuse.shdr",
    "${target_gen_dir}/shaders/directional_light.shdr",
    "${target_gen_dir}/shaders/full_screen.shdr",
    "${target_gen_dir}/shaders/point_light.shdr",
    "${target_gen_dir}/vertex_types/position.vtxd",
    "${target_gen_dir}/vertex_types/position_depth.vtxd",
    "${target_gen_dir}/vertex_types/position_normal_tangent_texcoord.vtxd",
    "${target_gen_dir}/vertex_types/position_texcoord.vtxd",
  ]

  output = "${target_gen_dir}/${target_name}.json"

  deps = [
    "mesh:unit_cube",
    "render_passes:deferred_render_passes",
    "render_targets:deferred_render_targets",
    "render_types:directional_light_render_type",
    "render_types:full_screen_render_type",
    "render_types:point_light_render_type",
    "render_types:render_object_render_type",
    "samplers:point_sampler",
    "shaders:diffuse",
    "shaders:directional_light",
    "shaders:full_screen",
    "shaders:point_light",
    "vertex_types:position",
    "vertex_types:position_depth",
    "vertex_types:position_normal_tangent_texcoord",
    "vertex_types:position_texcoord",
  ]
}

compile_module_binary("test_level_data") {
  asset_database = "${target_gen_dir}/test_dialog_asset_database.json"
  input = "test_level_data.mdbf.json"
  output = "${root_build_dir}/data/test_level_data.mdbf"

  deps = [
    ":test_dialog_asset_database",
  ]
}
